# VaLock

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  version
.github/workflows/: release.yml
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  instalock.rs  main.rs
src/components/: Sidebar.jsx  StatusBar.jsx
src/pages/: AllMap.jsx  EachMap.jsx  Home.jsx  Profile.jsx
