[package]
name = "valock"
version = "0.2.0"
description = "Valorant Insta-Lock Application"
authors = ["Mahdi Gholami"]
license = "mit"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
regex = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
